--- a/openapi/v1alpha1/schemas/Context.yaml
+++ b/openapi/v1alpha1/schemas/Context.yaml
@@ -1,6 +1,9 @@
 type: object
-description: context object
+description: |
+  The context to execute the command against.
 properties:
   name:
-    description: The name of the context
+    description: |
+      [required] The name of the context a command is inteded to run against.
+      Producers must ensure this name is available in the ktrl.cue config.
     type: string
